post/20230309_KuriseRollout实现的灰度发布/manifest/01-app-mainfest-clone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-clone
  labels:
    app: echoserver-clone
  namespace: foo
spec:
  replicas: 5
  selector:
    matchLabels:
      app: echoserver-clone
  strategy:
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: echoserver-clone
    spec:
      containers:
      - name: echoserver
         # mac m1 should choics image can support arm64,such as image e2eteam/echoserver:2.2-linux-arm64
        image: cilium/echoserver:1.10.1
        #image: cilium/echoserver:1.10.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-clone
  labels:
    app: echoserver
  namespace: foo
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoserver-clone
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-clone
  # 这里的annotation 需要附加，是为给kruise-rollout 进行查看的,未来ingress.class 会被弃用，转而使用ingressClassName的方式进行指定IngressController
  #annotations:
  #  kubernetes.io/ingress.class: nginx
  namespace: foo
spec:
  ingressClassName: alb
  rules:
  - host: echoserver-clone.caocaokeji.cn
    http:
      paths:
      - backend:
          service:
            name: echoserver-clone
            port:
              number: 80
        path: /apis/echo
        pathType: Exact
# 验证服务：
# curl http://echoserver.nginx-example.com/apis/echo
